tests/miz/fail/parser/fail_parser_algorithms_claims_recovery_001.miz
definition
  algorithm Broken[](,) ->
  do
    claim Inside do
      theorem BadPlace: thesis;
    end;
    const ;
    ghost ;
    snapshot ;
    return by A;
    x := ;
  end
end;

claim do
  Bad;
  @[label]
  theorem Deferred: thesis;
end
